[package]
authors = [{{toml-escape author}}]
build = "build.rs"
name = "{{name}}"
version = "0.1.0"

[dependencies]
cortex-m = "0.1.6"
r0 = "0.2.0"

[dependencies.cortex-m-semihosting]
optional = true
version = "0.1.2"

[dependencies.compiler_builtins]
features = ["mem"]
git = "https://github.com/rust-lang-nursery/compiler-builtins"

[features]
semihosting = ["cortex-m-semihosting"]

[profile.release]
lto = true
