[package]
authors = [{{toml-escape author}}]
build = "build.rs"
name = "{{name}}"
version = "0.1.0"

[dependencies]
cortex-m = "0.1.6"
# r0 = "0.2.0"
r0 = { git = "https://github.com/japaric/r0", branch = "init" }

[dependencies.alloc-cortex-m]
optional = true
version = "0.2.1"

[dependencies.cortex-m-semihosting]
optional = true
version = "0.1.2"

[dependencies.compiler_builtins]
features = ["mem"]
git = "https://github.com/rust-lang-nursery/compiler-builtins"

[features]
alloc = ["alloc-cortex-m"]
semihosting = ["cortex-m-semihosting"]

[profile.release]
lto = true
