[package]
authors = [{{toml-escape author}}]
build = "build.rs"
name = "{{name}}"
version = "0.1.0"

[dependencies]
r0 = "0.2.0"

[dependencies.cortex-m]
branch = "ng"
git = "https://github.com/japaric/cortex-m"

[dependencies.compiler_builtins]
features = ["mem"]
git = "https://github.com/rust-lang-nursery/compiler-builtins"

[features]
semihosting = ["cortex-m/semihosting"]

[profile.release]
lto = true
